--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -24,6 +24,7 @@ category:
 * [Scrapli](https://github.com/carlmontanari/scrapli)
 * [What's new in Python 3.10](https://docs.python.org/3.10/whatsnew/3.10.html)
 * [pydantic](https://github.com/samuelcolvin/pydantic)
+* [DearPyGui](https://github.com/hoffstadt/DearPyGui)
 
 
 ### Бонусные лекции Flask
